updated data-build steps

--- a/DATA/01-01-deprecated-data-steps.Rmd
+++ b/DATA/01-01-deprecated-data-steps.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Data Steps"
+title: "DEPRECATED Data Steps"
 output:
   html_document:
     theme: united
@@ -11,8 +11,6 @@ output:
 ---
 
 
-
-
 ```{r setup, include=FALSE}
 
 knitr::opts_chunk$set(echo = TRUE, warning=F, message=F, fig.width=8)
@@ -20,15 +18,6 @@ knitr::opts_chunk$set(echo = TRUE, warning=F, message=F, fig.width=8)
 ```
 
 
-
-
-```{r, echo=F, eval=F}
-
-# setwd( "C:/Users/jdlecy/Dropbox/04 - PAPERS/02 - Under Review/25 - Republican and Democratic Nonprofits/Data and Analysis" )
-
-
-setwd( "D:/Dropbox/04 - PAPERS/03 - Published/18 - Republican and Democratic Nonprofits/Data and Analysis" )
-```
 
 
 # R Packages
@@ -55,321 +44,9 @@ library( stargazer )  # pretty tables
 
 
 
-# Census Data
-
-This example uses the **acs** package in R to download 2010 American Community Survey data from the US Census. 
-
-You can find codes for variable names at the Census API site:
-
-<https://api.census.gov/data/2010/acs/acs5/variables.html>
-
-
-
-```{r, echo=F}
-api.key.install( key="b431c35dad89e2863681311677d12581e8f24c24" )
-
-my.censuskey <- "b431c35dad89e2863681311677d12581e8f24c24"
-```
-
-
-You will need to get a free Census API key: <https://api.census.gov/data/key_signup.html>
-
-```{r, eval=F}
-api.key.install( key="your_key_here" )
-
-my.censuskey <- "your_key_here"
-```
-
-
-
-**NOTE**: This study uses the **acs** package but I would highly recommend using Hannah Recht's **censusapi** package. It is much easier to use!
-
-For details on poverty measures see:
-
-https://www.socialexplorer.com/data/ACS2013_5yr/metadata/?ds=ACS13_5yr&table=B17001
-
-
-```{r, eval=T}
-
-census <- getCensus( name="acs/acs5", 
-                       vintage=2010, 
-                       key=my.censuskey, 
-                       vars=c( "NAME", 
-                               "B01002A_001E",  # median age
-                               "B19013_001E",   # median household income
-                               "B01003_001E",   # total population"B01003_001"
-                               "B17001_002E",   # poverty
-                               "B17001_001E",   # population used for pov
-                               "B03003_003E",   # hispanic
-                               "B02001_002E",   # race.white
-                               "B02001_003E"),  # race.black
-                       region="tract:*", 
-                       regionin="state:48")     # texas
-
-names( census )
-
-census$geoid <- paste0( census$state, census$county, census$tract )
-
-names( census ) <- c("state","county","tract","NAME",
-                     "medianage","income",
-                     "totalpop","poverty","povbase",
-                     "hispanic","white","black",
-                     "geoid")
-
-# Remove missing values
-census$income[ census$income == -666666666 ] <- NA
-census$medianage[ census$medianage == -666666666 ] <- NA
-
-# Delete no population cases so rates are not infinite
-census$totalpop[ census$totalpop == 0 ] <- NA
-census$povbase[ census$povbase == 0 ] <- NA
-
-census <- 
-  census %>%
-  mutate( poverty = round( 100*(poverty/povbase), 2),
-          hispanic = round( 100*(hispanic/totalpop), 2),
-          white = round( 100*(white/totalpop), 2),
-          black = round( 100*(black/totalpop), 2) )
-          
-head( census )
-```
-
-
-```{r, results="asis"}
-census %>%
-  select( medianage, income, totalpop, poverty,
-          hispanic, white, black ) %>% 
-          stargazer( type = "html", digits=0 )
-```
-
-
-
-
-```{r, eval=F}
-write.csv( census, "TexasCensusData2010.csv", rownames=F )
-```
-
-
-
-
-```{r, eval=F, echo=F}
-
-census <- read.csv( "./Census Data/Texas Census Data.csv", colClasses="character" )
-
-```
-
-
-
-
-
-
-
-# Voting Districts Crosswalk
-
-Voting districts and census tracts do not all share contiguous boundaries, so merging voting data and census data can be tricky. The Missouri Census Data Center has created tools that maps voting districts to census tracts using geographic apportionment. You can visit the MABLE Geocorr14 Geographic Correspondence Engine here:
-
-<http://mcdc.missouri.edu/websas/geocorr14.html>
-
-A correspondence table has been created by selecting the 2010 Census Tracts and Voting Tabulation Districts and is saved as the file "crosswalk.csv".
-
-Note, the variable **pop10** comes from the crosswalk and refers to **voting district population**. The variable **totalpop** comes from the 2010 Census ACS and refers to the **census tract population**.
-
-![](assets/geocorr_correspondence_table.png)
-
-Since the relationships are not nested it will not be a one-to-one relationship, i.e. one voting district can match to multiple census tracts. As a result, we select the census tract for each voting district that has the highest apportionment rate (geographical overlap). 
-
-The mean apportionment rate is 89% (standard deviation of 17%), with a median of 100% overlap. 
-
-
-```{r, echo=F, eval=F}
-
-setwd( "C:/Users/jdlecy/Dropbox/04 - PAPERS/02 - Under Review/25 - Republican and Democratic Nonprofits/Data and Analysis" )
-
-
-```
-
-
-```{r}
-crosswalk <- read.csv( "crosswalk.csv", colClasses="character" )
-
-head( crosswalk )
-
-crosswalk <- crosswalk[ -1 , ] # drop first row of labels
-```
-
-
-### Create a crosswalk geoid
-
-```{r}
-crosswalk$tract.key <- paste( crosswalk$county, 
-                              gsub( "\\.","", crosswalk$tract), sep="" )
-head( crosswalk$tract.key )
-```
-
-
-### Add the crosswalk to census data
-
-```{r}
-census.dat <- merge( crosswalk, census, by.x="tract.key", by.y="geoid" )
-
-head( census.dat )
-```
-
-
-
-
-
-# Voter Data
-
-Data was obtained from the Harvard Election Data Archive project , a source for 2008 presidential election results at a voting district level for all 50 states. Texas contains 8,400 separate voting districts (VTDs). In the 2008 election of John McCain versus Barack Obama Texas had 1,451 Democratic supermajority districts and 2,886 Republican supermajority districts, representing 51% of all voting districts in the state.
-
-http://projects.iq.harvard.edu/eda/
-
-The data comes as a shapefile with historic voting data embedded, so we need to load the shapefile using the **rgdal** package in R and extract the historic voting data frame.
-
-Select Data Dictionary:
-
-* CNTY - County FIPS ID  
-* VTD - Voting District ID  
-* Shape_area - Area of voting district polygon 
-* Pres_D_08 - Number of presidential votes for Democratic candidate in 2008
-* Pres_R_08 - Number of presidential votes for Republican candidate in 2008
-
-
-
-
-```{r, eval=T}
-# library( rgdal )
-TX <- readOGR(".","Texas_VTD" )
-```
-
-```{r}
-par( mar=c(0,0,4,0) )
-plot( TX, main="All Voting Districts in TX" )
-```
-
-
-
-### Convert spatial object to a dataframe
-
-```{r}
-tx <- as.data.frame( TX )
-head( tx )
-```
-
-
-
-
-
-
-
-
-
-## Create Compatible IDs
-
-The **vtdname** in the Census to VTD Crosswalk file, and the **vtdkey** in the Voting dataset are currently incompatible. 
-
-The **vtdname** variables has four forms:
-
-* 480190407  
-* 48041010A, 48041010B, etc. 
-* Vtng Dist 3111 
-* Vtng Dist 03-3 
-
-Each follows a format of:  SS-CCC-DIST
-
-SS = state fips code (2 digits)
-CCC = county fips code (3 digits)
-DIST = voting district (4 characters)
-
-```{r}
-head( census.dat$vtdname, 50 )
-```
-
-
-To standardize:
-
-```{r}
-
-# Census Data
-
-vtdnm <-  census.dat$vtdname
-
-vtdnm <- gsub( "Vtng Dist ", "xxxxx", vtdnm )
-
-head( vtdnm, 50 )
-```
-
-
-```{r}
-# table( nchar( vtdnm ) )  # should all be 9 characters
-
-vtd.temp <- substr( vtdnm, 6, 9 )
-  
-vtd.key1 <- paste0( census.dat$county.x, vtd.temp )
-
-census.dat$vtd.key1 <- vtd.key1
-
-head( census.dat$vtd.key1, 50 )
-```
-
-
-
-
-```{r}
-# Voting Data
-
-# TX state fips = 48
-
-fips <- 48000 + as.numeric( as.character( tx$CNTY ) )
-
-vtd.key2 <- paste0( fips, as.character( tx$VTD ) )
-
-# table( nchar( vtd.key2 ) )  # should all be 9 characters
-# vtd.key2[ nchar( vtd.key2 ) == 10 ]  # not sure about these 126
-
-head( vtd.key2, 50 )
-```
-
-
-### Fields to Merge
-
-* vtd.key2 - voter district id
-* Pres_D_08 - votes cast for Obama in 2008
-* Pres_R_08 - votes cast for McCain in 2008
-* Shape_area - area of the voting district used for population density measures
-
-```{r}
-tx$vtd.key2 <- vtd.key2
-tx <- tx[ , c( "vtd.key2", "Pres_D_08", "Pres_R_08", "Shape_area" ) ]
-head( tx )
-```
-
-
-
-## Merge Voting and Census Data
-
-```{r}
-full.dat <- merge( census.dat, tx, by.x="vtd.key1", by.y="vtd.key2" )
-head( full.dat )
-write.csv( full.dat, "CensusPlusVotingAll.csv", row.names=F )
-```
-
-
-
-
-
-
-
-
-
-
-
-
-
 # Original Census Query (deprecated):
 
-See `censusapi` package above for an easier method. For replication purposes the original code is included here:
+See `censusapi` package for an easier method. For replication purposes the original code used to fetch census data is included here:
 
 ```{r}
 
@@ -782,5 +459,4 @@ img {
 
 
 ```
-
 
